--- a/css/user.css
+++ b/css/user.css
@@ -1,5 +1,69 @@
-.ticket_container{
+body{
+    background-color: #f4f4f4;
+}
+.ticket_grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
+    gap: 20px; /* Space between grid items */
+    margin-bottom: 20px; /* Space between rows */
+}
+.nav_bar{
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    background-color: #76dada;
+    padding: 0px 20px;
+    align-items: center;
+    font-family: sans-serif;
+}
+/* Styling each ticket */
+.collection_ticket {
+    border: 1px solid #ccc;
+    padding: 15px;
+    box-sizing: border-box;
+    background-color: #f9f9f9;
+}
+
+/* Style for the ticket button */
+.ticket_button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #51c8e6;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.ticket_button:hover {
+    background-color: #2b8b9c;
+}
+.nav_bar_two{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+li {
+    display: inline-block;
+    margin-right: 10px;
+}
+li a{
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+
+.logout{   
+margin-left: 10px;
+padding: 8px 16px;
+background-color: #51c8e6; 
+border-radius: 10px; 
+border: none;
+color: white;
+font-weight: bold;
+}
+
+
+.logout:hover{
+    background-color: #2b8b9c;
+cursor: pointer;
 }
